--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -3,14 +3,13 @@ name: "Hello world workflow"
 #Controls when the action will run. Triggers the workflow on push done to master or production branch
 on:
   push:
-    branches: 
+    branches:
       - master
       - production
 
-
 jobs:
   hello_world:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: "Print hello world"
-      run: echo "Hello world"
+        run: echo "Hello world"
