Added new pipelines/workflow

--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -1,14 +1,21 @@
 name: "Multi event pipeline / workflow"
 on:
-    push: # Event: Whenever a push is made to the repository on the master branch
-        branches:
-            - master
-            - test
-
+  push: # Event: Whenever a push is made to the repository on the master branch/test branch
+    branches:
+      - master
+      - test
+  pull_request: # Event: Whenever a pull request is made to the repository
+    branches: -master
 
 jobs:
-    on-push: # Job: On push
-        runs-on: ubuntu-latest
-        steps: # Steps to be executed in the job
-            - name: "Running on master push" # Step 1
-              run: echo "Running on master push"
+  on-push: # Job: On push
+    runs-on: ubuntu-latest
+    steps: # Steps to be executed in the job
+      - name: "Running on master/test push" # Step 1
+        run: echo "Running on master/test push"
+
+  on-pull-request: # Job name
+    runs-on: ubuntu-latest
+    steps: # Steps to be executed in the job
+      - name: "Running on pull request" # Step 1
+        run: echo "Running on pull request"
