--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -5,7 +5,10 @@ on:
       - master
       - test
   pull_request: # Event: Whenever a pull request is made to the repository
-    branches: -master
+    branches: 
+        -master
+  workflow_dispatch:
+
 
 jobs:
   on-push: # Job: On push
