--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -5,10 +5,8 @@ on:
       - master
       - test
   pull_request: # Event: Whenever a pull request is made to the repository
-    branches: 
-        -master
+    branches: -master
   workflow_dispatch:
-
 
 jobs:
   on-push: # Job: On push
@@ -23,3 +21,10 @@ jobs:
     steps: # Steps to be executed in the job
       - name: "Running on pull request" # Step 1
         run: echo "Running on pull request"
+
+  on-workflow-dispatch: # Job 3
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps: # Steps to be executed in the job
+      - name: "Running on workflow dispatch" # Step 1
+        run: echo "Running on workflow dispatch"
