--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -5,8 +5,12 @@ on:
       - master
       - test
   pull_request: # Event: Whenever a pull request is made to the repository
-    branches: -master
+    branches: 
+        -master
+    types:
+        - closed
   workflow_dispatch:
+
 
 jobs:
   on-push: # Job: On push
@@ -21,6 +25,13 @@ jobs:
     steps: # Steps to be executed in the job
       - name: "Running on pull request" # Step 1
         run: echo "Running on pull request"
+
+  on-pull-request-closed:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    steps:
+        - name: "Running on pull request closed"
+          run: echo "Running on pull request closed"
 
   on-workflow-dispatch: # Job 3
     if: github.event_name == 'workflow_dispatch'
