Added new pipelines/workflow

--- a/.github/workflows/multiEventPipeline.yml
+++ b/.github/workflows/multiEventPipeline.yml
@@ -6,9 +6,10 @@ on:
       - test
   pull_request: # Event: Whenever a pull request is made to the repository
     branches: 
-        -master
+        - master
     types:
         - closed
+        - opened
   workflow_dispatch:
 
 
